--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 /.emacs.desktop
 /auto-save-list
 /.session
-/session.*
-/custom.el
 .svn
 *~
-.*.lock
-cookies
 \#*
-site-lisp/package/
+/bookmarks
